# PA2

./: README.md  progtest2BackupPredMazanimPulkuFunkci.rar
Semestralka/: CBoard.cpp  CBoard.h  CCard.cpp  CCard.h  CGame.cpp  CGame.h  CMainMenu.cpp  CMainMenu.h  CMakeLists.txt  CMenu.cpp  CMenu.h  CMinion.cpp  CMinion.h  CPauseMenu.cpp  CPauseMenu.h  CSpell.cpp  CSpell.h  CWindow.cpp  CWindow.h  main.cpp
dbs/: semestralka.dmd
dbszaloha/: semstralkazaloha.dmd
dbszaloha2/: zaloha2.dmd
hash_zkouska/: CMakeLists.txt  main.cpp
hash_zkouska2/: CMakeLists.txt  a.out  main.cpp
hash_zkouska3/: CMakeLists.txt  a.out  main.cpp
letiste_zkouska/: CMakeLists.txt  main.cpp
phamducm/: CMakeLists.txt  Doxyfile  Makefile  phamducm  prohlaseni.txt  zadani.txt
phamducm/cards/: cards.txt
phamducm/examples/: saveFile
phamducm/src/: CAIPlayer.cpp  CAIPlayer.h  CBoard.cpp  CBoard.h  CCard.h  CCardStack.cpp  CCardStack.h  CGame.cpp  CGame.h  CHumanPlayer.cpp  CHumanPlayer.h  CMainMenu.cpp  CMainMenu.h  CMinion.cpp  CMinion.h  CPauseMenu.cpp  CPauseMenu.h  CPlayer.cpp  CPlayer.h  CSpell.cpp  CSpell.h  CWindow.h  CardDatabase.h  main.cpp
progtest1/: CMakeLists.txt  a.out  extra_input_00.img  extra_input_01.img  extra_input_02.img  extra_input_03.img  extra_input_08.img  extra_input_10.img  extra_input_11.img  extra_ref_01.img  extra_ref_05.img  extra_ref_11.img  input_03.img  main.cpp  output_06.img  priprava.c  ref_02.img  test.cpp
progtest2/: CMakeLists.txt  a.out  main.cpp
progtest3/: CMakeLists.txt  a.out  main.cpp
semestralka/src/: CAIPlayer.cpp  CAIPlayer.h  CBoard.cpp  CBoard.h  CCard.cpp  CCard.h  CCardStack.cpp  CCardStack.h  CGame.cpp  CGame.h  CHumanPlayer.h  CMakeLists.txt  CMinion.cpp  CMinion.h  CPauseMenu.h  CPlayer.h  CSpell.cpp  CSpell.h  CardDatabase.cpp  CardDatabase.h  a.out  gameStart  main.cpp  makefile  phamducm
semestralka/src/cards/: sample.txt
semestralka/src/saveFolder/: sample.txt
test/: a.out  (+1 more)
(+224 files in other folders)
